# notekeeper-app

./: latest.json  package-lock.json  package.json  structure.txt  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: EmptyState.tsx  ImportModal.tsx  KeyboardShortcuts.tsx  ThemeToggle.tsx
src/components/CommandPalette/: index.tsx
src/components/Editor/: BacklinksPanel.tsx  NoteLink.ts  NoteLinkSuggest.tsx  NoteLinkView.tsx  SlashMenu.tsx  StatusBar.tsx  Toolbar.tsx  VersionHistory.tsx  index.tsx
src/components/FileTree/: FileTreePanel.tsx
src/components/Sidebar/: NoteTree.tsx  NoteTreeItem.tsx  SearchBar.tsx  index.tsx
src/db/: queries.ts  schema.ts
src/features/ai/components/: AIActionBar.tsx  AISetupModal.tsx
src/features/ai/lib/: actions.ts  buildContext.ts  (+2 more)
src/features/graph/: GraphControls.tsx  GraphLegend.tsx  GraphNotePreview.tsx  GraphView.tsx  graphTypes.ts  useGraphData.ts  useGraphEdit.ts  useGraphSearch.ts  useGraphSimulation.ts
src/features/onboarding/: OnboardingModal.tsx  icons.tsx  index.ts  sampleNotes.ts  useSampleNotes.ts
src/hooks/: useAutoSave.ts
src/lib/: sidebarTimer.ts
src/lib/exporters/: markdown.ts  pdf.ts
src/lib/tauri/: fs.ts
src/lib/templates/: blank.ts  brainstorm.ts  daily.ts  index.ts  meeting.ts  project.ts
src/store/: useNoteStore.ts  useUIStore.ts
src/styles/: base.css  blocks.css  code-block.css  main.css  typography.css  ui.css
src/types/: index.ts
(+73 files in other folders)
