[package]
name = "idemora"
version = "1.1.0"
description = "Idemora - A quiet place for your notes, ideas, and the connections between them"
authors = ["joshua"]
edition = "2021"

[lib]
name = "idemora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["full"] }
